# PhysiBot

./: .gitignore  PhysiBot.cmd  README.md  START_HERE.txt  pyproject.toml  run.ps1  setup.bat  start.bat  一键启动.bat
.github/workflows/: release.yml
docs/: PRD.md  architecture.md  coding-standards.md  tdd-guide.md  technical-plan.md
physi-data/: MEMORY.md  PHYSI.md  config.wcd.yaml  config.yaml.example  local.env.example
scripts/: apply_wcd_config.ps1  bootstrap_and_run.ps1  build_dist.ps1  build_exe.ps1  check_env.ps1  prefetch_vendor.ps1  setup.ps1
src/physi_core/: __main__.py  main.py  observability.py
src/physi_core/agent/: loop.py  prompts.py  tools.py
src/physi_core/config/: persist.py  settings.py
src/physi_core/events/: bus.py  scheduler.py
src/physi_core/integrations/: activitywatch.py  clipboard.py  homeassistant.py  napcat.py  privacy.py  qq.py  screenpipe.py
src/physi_core/llm/: adapter.py  providers.py  response.py
src/physi_core/memory/: consolidator.py  identity.py  index.py  long_term.py  mid_term.py  short_term.py  (+1 more)
tests/: conftest.py
tests/integration/: test_full_loop.py  test_llm_real.py
tests/unit/: test_activitywatch.py  test_agent_loop.py  test_clipboard.py  test_consolidator.py  test_e2e.py  test_event_bus.py  test_identity.py  test_index.py  test_llm_adapter.py  test_llm_response.py  test_long_term.py  test_mid_term.py  test_persist.py  test_privacy.py  test_prompts.py  test_qq.py  test_scheduler.py  test_screenpipe.py  test_settings.py  test_settings_env.py  test_short_term.py  test_tools.py  test_work_projects_patch.py
(+7 files in other folders)
